Adjust tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,8 @@
 
 setw -g utf8 on
 set -g status-utf8 on
-set -g default-command /bin/zsh
-set -g default-shell /bin/zsh
+set -g default-command /bin/bash
+set -g default-shell /bin/bash
 
 set -g history-limit 5000
 setw -g mode-keys vi
@@ -31,7 +31,7 @@ bind-key -t vi-copy y copy-selection
 unbind-key p
 bind-key p paste-buffer
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l bash"
 bind-key -t vi-copy Y copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key P run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
