Split osx config for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,10 +31,6 @@ bind-key -t vi-copy y copy-selection
 unbind-key p
 bind-key p paste-buffer
 
-set-option -g default-command "reattach-to-user-namespace -l bash"
-bind-key -t vi-copy Y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key P run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
 # split windows like vim.  - Note: vim's definition of a horizontal/vertical split is reversed from tmux's
 unbind-key '"'
 unbind-key %
@@ -133,3 +129,5 @@ set-window-option -g clock-mode-colour colour64 #green
 
 # bind C-[ run '~/Documents/tmux-powerline/mute_powerline.sh left'      # Mute left statusbar.
 # bind C-] run '~/Documents/tmux-powerline/mute_powerline.sh right'     # Mute right statusbar.
+
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux_osx.conf'
