fixed tmux osx path issue

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -130,4 +130,4 @@ set-window-option -g clock-mode-colour colour64 #green
 # bind C-[ run '~/Documents/tmux-powerline/mute_powerline.sh left'      # Mute left statusbar.
 # bind C-] run '~/Documents/tmux-powerline/mute_powerline.sh right'     # Mute right statusbar.
 
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux_osx.conf'
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
