--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g default-shell /bin/bash
 
 set -g history-limit 5000
 setw -g mode-keys vi
-setw -g mode-mouse off
+setw -g mouse on
 set -sg escape-time 1
 set -g repeat-time 1000
 # set -g renumber-windows on
@@ -53,10 +53,10 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # resize panes
-bind-key ^h resize-pane -L 100
-bind-key ^j resize-pane -D 100
-bind-key ^k resize-pane -U 100
-bind-key ^l resize-pane -R 100
+# bind-key ^h resize-pane -L 100
+# bind-key ^j resize-pane -D 100
+# bind-key ^k resize-pane -U 100
+# bind-key ^l resize-pane -R 100
 
 bind-key -r H resize-pane -L 20
 bind-key -r J resize-pane -D 5
