--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,10 +31,14 @@ bind-key -t vi-copy y copy-selection
 unbind-key p
 bind-key p paste-buffer
 
+# sessions
+bind-key ^ switch-client -l
+bind-key c-s choose-tree
+
 # split windows like vim.  - Note: vim's definition of a horizontal/vertical split is reversed from tmux's
 unbind-key '"'
 unbind-key %
-unbind-key s
+# unbind-key s
 bind-key s split-window -v
 bind-key S split-window -v -l 40
 bind-key v split-window -h
@@ -45,12 +49,13 @@ bind-key c-n next-window
 bind-key c-p previous-window
 bind-key c-l last-window
 
-
 # navigate panes with hjkl
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+# unbind-key ';'
+bind-key p last-pane
 
 # resize panes
 # bind-key ^h resize-pane -L 100
