fixed tmux config issue

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # Configuration
 
-setw -g utf8 on
-set -g status-utf8 on
+# setw -g utf8 on
+# set -g status-utf8 on
 set -g default-command /bin/bash
 set -g default-shell /bin/bash
 
