--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g default-shell /bin/bash
 
 set -g history-limit 5000
 setw -g mode-keys vi
-# setw -g mouse on
+setw -g mouse off
 set -sg escape-time 1
 set -g repeat-time 1000
 # set -g renumber-windows on
@@ -20,6 +20,11 @@ set -g visual-activity on
 unbind-key C-b
 set -g prefix C-a
 bind-key C-a send-prefix
+
+# Clear screen
+# bind-key C-l send-keys "clear && tmux clear-history" \; send-keys "Enter"
+# bind -n C-k clear-history
+bind-key C-l send-keys -R \; clear-history \; send-keys "Enter"
 
 # Copy and paste like in vim
 # unbind-key [
@@ -34,8 +39,7 @@ bind-key p paste-buffer
 # sessions
 bind-key ^ switch-client -l
 bind-key c-s choose-tree
-
-# split windows like vim.  - Note: vim's definition of a horizontal/vertical split is reversed from tmux's
+# split windows like vim.  - Note: vim's definition of a horizontal/vertical split is reversed from tmux's 
 unbind-key '"'
 unbind-key %
 # unbind-key s
@@ -47,7 +51,7 @@ bind-key V split-window -h -l 120
 unbind-key n
 bind-key c-n next-window
 bind-key c-p previous-window
-bind-key c-l last-window
+bind-key c-c last-window
 
 # navigate panes with hjkl
 bind-key h select-pane -L
