--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,8 @@ setw -g mouse off
 set -sg escape-time 1
 set -g repeat-time 1000
 # set -g renumber-windows on
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
 # Activity monitoring
 setw -g monitor-activity on
