To integrated tw dotfiles structure

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,18 +1,19 @@
 # Configuration
 
+# improve colors
+set -g default-terminal "screen-256color"
+
 # setw -g utf8 on
 # set -g status-utf8 on
-set -g default-command /bin/bash
-set -g default-shell /bin/bash
 
 set -g history-limit 5000
 setw -g mode-keys vi
 setw -g mouse off
 set -sg escape-time 1
 set -g repeat-time 1000
-# set -g renumber-windows on
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
+set -g renumber-windows on
 
 # Activity monitoring
 setw -g monitor-activity on
@@ -90,8 +91,6 @@ bind-key c-q killp
 # unbind-key d
 # bind-key ^d detach-client
 
-#### COLOUR (Solarized 256)
-set -g default-terminal "screen-256color"
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
@@ -126,7 +125,6 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
-
 # #Powerline
 # set-option -g status on
 # set-option -g status-interval 2
@@ -141,4 +139,8 @@ set-window-option -g clock-mode-colour colour64 #green
 # bind C-[ run '~/Documents/tmux-powerline/mute_powerline.sh left'      # Mute left statusbar.
 # bind C-] run '~/Documents/tmux-powerline/mute_powerline.sh right'     # Mute right statusbar.
 
+# Local config for osx
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+
+# Local config
+if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
