--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ set -g renumber-windows on
 
 # Activity monitoring
 setw -g monitor-activity on
-set -g visual-activity on
+# set -g window-status-activity-style 'fg=colour247,blink'
 
 # Key Bindings
 unbind-key C-b
@@ -53,8 +53,7 @@ bind-key V split-window -h -l 120
 
 unbind-key n
 bind-key c-n next-window
-bind-key c-p previous-window
-bind-key c-c last-window
+bind-key c-p last-window
 
 # navigate panes with hjkl
 bind-key h select-pane -L
@@ -63,12 +62,6 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 # unbind-key ';'
 bind-key p last-pane
-
-# resize panes
-# bind-key ^h resize-pane -L 100
-# bind-key ^j resize-pane -D 100
-# bind-key ^k resize-pane -U 100
-# bind-key ^l resize-pane -R 100
 
 bind-key -r H resize-pane -L 20
 bind-key -r J resize-pane -D 5
@@ -81,66 +74,22 @@ bind-key -r U swap-pane -U
 unbind-key r
 bind-key r source-file ~/.tmux.conf \; display "Configuration Reloaded!"
 
-bind-key 1 select-layout even-horizontal
-bind-key 2 select-layout even-vertical
-bind-key 3 select-layout main-horizontal
-bind-key 4 select-layout main-vertical
-bind-key 5 select-layout tiled
-
 bind-key c-q killp
 # unbind-key d
 # bind-key ^d detach-client
-
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-# set-option -g pane-active-border-fg colour241 #base01
-set-option -g pane-active-border-fg green #base01
-# set-option -g pane-border-bg black
-# set-option -g pane-active-border-bg black
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# #Powerline
-# set-option -g status on
-# set-option -g status-interval 2
-# set-option -g status-utf8 on
-# set-option -g status-justify "centre"
-# set-option -g status-left-length 60
-# set-option -g status-right-length 90
-# set-option -g status-left "#(~/Documents/tmux-powerline/powerline.sh left)"
-# set-option -g status-right "#(~/Documents/tmux-powerline/powerline.sh right)"
-# set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
-
-# bind C-[ run '~/Documents/tmux-powerline/mute_powerline.sh left'      # Mute left statusbar.
-# bind C-] run '~/Documents/tmux-powerline/mute_powerline.sh right'     # Mute right statusbar.
 
 # Local config for osx
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+# Plugins
+# https://github.com/tmux-plugins/tpm
+set -g @plugin 'seebi/tmux-colors-solarized'
+    set -g @colors-solarized '256'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.tmux/plugins/tpm/tpm'
