--- a/tmux.conf
+++ b/tmux.conf
@@ -34,8 +34,10 @@ bind-key C-l send-keys -R \; clear-history \; send-keys "Enter"
 bind Escape copy-mode
 # bind-key -n ^v copy-mode
 # bind-key C-A send-prefix
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-selection
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind-key p
 bind-key p paste-buffer
 
