--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,7 @@ bind-key p paste-buffer
 # sessions
 bind-key ^ switch-client -l
 bind-key c-s choose-tree
-# split windows like vim.  - Note: vim's definition of a horizontal/vertical split is reversed from tmux's 
+# split windows like vim.  - Note: vim's definition of a horizontal/vertical split is reversed from tmux's
 unbind-key '"'
 unbind-key %
 # unbind-key s
@@ -89,9 +89,12 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 # Plugins
 # https://github.com/tmux-plugins/tpm
 set -g @plugin 'seebi/tmux-colors-solarized'
-  set -g @colors-solarized '256'
+    # set -g @colors-solarized '256'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin "tmux-plugins/tmux-open"
+set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 run '~/.tmux/plugins/tpm/tpm'
+# run-shell '~/.tmux/plugins/tmux-yank/yank.tmux'
