--- a/tmux-osx.conf
+++ b/tmux-osx.conf
@@ -1,4 +1,4 @@
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-# bind-key -t vi-copy Y copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -T vi-copy Y send -X copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key P run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
+# bind-key -T copy-mode-vi Y send-keys -X copy-pipe 'reattach-to-user-namespace pbcopy && tmux display "Copied!"'
+# bind-key P run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
