--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,4 +1,11 @@
 {
+	"list.insertMappings": {
+		"<C-c>": "do:exit",
+		"<C-d>": "do:stop",
+		"<C-t>": "action:tabe",
+		"<C-x>": "action:split",
+		"<C-v>": "action:vsplit"
+	},
   "suggest.autoTrigger": "none",
 	"suggest.noselect": false,
   "coc.preferences.formatOnSaveFiletypes": ["javascript", "html", "vue"],
