--- a/tmux.conf
+++ b/tmux.conf
@@ -80,6 +80,9 @@ bind-key c-q killp
 # unbind-key d
 # bind-key ^d detach-client
 
+# Style
+if-shell "[ -f ~/.tmux-style.conf ]" 'source ~/.tmux-style.conf'
+
 # Local config for osx
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
 
