--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,23 +1,59 @@
 {
   "suggest.autoTrigger": "none",
   "suggest.noselect": false,
-  "coc.preferences.formatOnSaveFiletypes": ["javascript", "html", "vue"],
-  "vetur.format.defaultFormatter.html": "prettier",
-  "languageserver": {
-    "golang": {
-      "command": "gopls",
-      "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
-      "filetypes": ["go"]
-    },
-    "sorbet": {
-      "command": "solargraph",
-      "args": ["tc", "--lsp", "--enable-all-experimental-lsp-features"],
-      "filetypes": ["ruby"],
-      "rootPatterns": ["sorbet/config"],
-      "initializationOptions": {},
-      "settings": {}
-    }
+  "suggest.triggerAfterInsertEnter": false,
+  "suggest.timeout": 500,
+  "suggest.detailField": "preview",
+  "suggest.triggerCompletionWait": 100,
+  "suggest.snippetIndicator": "🌟",
+  "suggest.echodocSupport": true,
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "function": "\u2A15",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
+    "class": "\uf0e8",
+    "interface": "\uf417",
+    "text": "\u2663",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf530",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\uf6a6",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf723",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
   },
+  "diagnostic.signOffset": 9999999,
+  "diagnostic.errorSign": "●",
+  "diagnostic.warningSign": "●",
+  "diagnostic.displayByAle": false,
+  "diagnostic.refreshOnInsertMode": true,
+//  "languageserver": {
+//    "golang": {
+//      "command": "gopls",
+//      "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
+//      "filetypes": ["go"]
+//    },
+//    "sorbet": {
+//      "command": "solargraph",
+//      "args": ["tc", "--lsp", "--enable-all-experimental-lsp-features"],
+//      "filetypes": ["ruby"],
+//      "rootPatterns": ["sorbet/config"],
+//      "initializationOptions": {},
+//      "settings": {}
+//    }
+//  },
   "list.insertMappings": {
     "<C-c>": "do:exit",
     "<C-d>": "do:stop",
@@ -26,5 +62,15 @@
     "<C-v>": "action:vsplit"
   },
   "snippets.ultisnips.directories": ["coc/ultisnips"],
-  "coc.preferences.extensionUpdateCheck": "weekly"
+  "coc.preferences.extensionUpdateCheck": "weekly",
+  "coc.preferences.snippetStatusText": "Ⓢ ",
+  "coc.preferences.formatOnSaveFiletypes": ["javascript", "html", "vue", "css", "javascriptreact"],
+  "vetur.format.defaultFormatter.html": "prettier",
+  "prettier.statusItemText": "ⓟ ",
+  "prettier.eslintIntegration": true,
+  "prettier.tslintIntegration": true,
+  "prettier.stylelintIntegration": true,
+  "eslint.filetypes": ["javascript", "javascriptreact", "vue"],
+  "eslint.autoFix": true,
+  "eslint.autoFixOnSave": true
 }
