--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,11 +1,13 @@
 {
+  // "coc.preferences.useQuickfixForLocations": true,
   "suggest.autoTrigger": "none",
   "suggest.noselect": false,
   "suggest.triggerAfterInsertEnter": false,
   "suggest.timeout": 500,
   "suggest.detailField": "preview",
   "suggest.triggerCompletionWait": 100,
-  "suggest.snippetIndicator": "🌟",
+  "suggest.snippetIndicator": "⭐︎",
+  // "suggest.snippetIndicator": "🌟",
   "suggest.echodocSupport": true,
   "suggest.completionItemKindLabels": {
     "keyword": "\uf1de",
