--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -46,14 +46,14 @@
       "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
       "filetypes": ["go"]
     },
-//    "sorbet": {
-//      "command": "solargraph",
-//      "args": ["tc", "--lsp", "--enable-all-experimental-lsp-features"],
-//      "filetypes": ["ruby"],
-//      "rootPatterns": ["sorbet/config"],
-//      "initializationOptions": {},
-//      "settings": {}
-//    }
+    "sorbet": {
+      "command": "solargraph",
+      "args": ["tc", "--lsp", "--enable-all-experimental-lsp-features"],
+      "filetypes": ["ruby"],
+      "rootPatterns": ["sorbet/config"],
+      "initializationOptions": {},
+      "settings": {}
+    }
   },
   "list.insertMappings": {
     "<C-c>": "do:exit",
@@ -62,13 +62,18 @@
     "<C-x>": "action:split",
     "<C-v>": "action:vsplit"
   },
+ // "solargraph.useBundler":true,
+ // "solargraph.diagnostics": true,
+//  "solargraph.autoformat": true,
+  "solargraph.formatting": true,
+//  "solargraph.hover": true,
   "snippets.extends": {"javascriptreact": ["javascript"], "vue": ["vue", "javascript"]},
   "snippets.editSnippetsCommand": "vsplit",
   "snippets.ultisnips.enable": true,
   "coc.preferences.jumpCommand": "edit",
   "coc.preferences.extensionUpdateCheck": "weekly",
   "coc.preferences.snippetStatusText": "Ⓢ ",
-  "coc.preferences.formatOnSaveFiletypes": ["javascript", "html", "vue", "css", "javascriptreact", ""],
+  "coc.preferences.formatOnSaveFiletypes": ["javascript", "html", "vue", "css", "javascriptreact"],
   "vetur.format.defaultFormatter.html": "prettier",
   "prettier.statusItemText": "ⓟ ",
   "prettier.eslintIntegration": true,
