--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -42,7 +42,7 @@
   "languageserver": {
     "golang": {
       "command": "gopls",
-      "rootPatterns": ["go.mod"],
+      "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
       "filetypes": ["go"]
     },
     //"sorbet": {
