--- a/tmux.conf
+++ b/tmux.conf
@@ -65,10 +65,10 @@ bind-key l select-pane -R
 # unbind-key ';'
 bind-key p last-pane
 
-bind-key -r H resize-pane -L 20
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
-bind-key -r L resize-pane -R 20
+bind-key -r H resize-pane -L 10
+bind-key -r J resize-pane -D 10
+bind-key -r K resize-pane -U 10
+bind-key -r L resize-pane -R 10
 
 bind-key -r D swap-pane -D
 bind-key -r U swap-pane -U
@@ -80,9 +80,6 @@ bind-key c-q killp
 # unbind-key d
 # bind-key ^d detach-client
 
-# Style
-if-shell "[ -f ~/.tmux-style.conf ]" 'source ~/.tmux-style.conf'
-
 # Local config for osx
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
 
@@ -92,5 +89,15 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 # Plugins
 # https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @open-S 'https://www.google.com/search?q='
 
+# Style
+if-shell "[ -f ~/.tmux-style.conf ]" 'source ~/.tmux-style.conf'
 run '~/.tmux/plugins/tpm/tpm'
