--- a/tmux-style.conf
+++ b/tmux-style.conf
@@ -15,7 +15,7 @@ set -g status-left-length "100"
 setw -g window-status-activity-style "underscore,fg=colour246,bg=colour237"
 setw -g window-status-separator ""
 setw -g window-status-style "none,fg=colour246,bg=colour237"
-set -g status-left "#[fg=colour236,bg=colour246] #S #[fg=colour246,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] #I:#P  #F #[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour237] #H #[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] %H:%M %d-%b-%y "
+set -g status-left "#{prefix_highlight}#[fg=colour236,bg=colour246] #S #[fg=colour246,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] #I:#P  #F #[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour237] #H #[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] Batt: #{battery_percentage} CPU: #{cpu_percentage} | %a %h-%d %H:%M"
 setw -g window-status-format "#[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] #I  #W #[fg=colour237,bg=colour239,nobold,nounderscore,noitalics]"
