--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -45,15 +45,19 @@
       "rootPatterns": ["go.mod", ".vim/", ".git/", ".hg/"],
       "filetypes": ["go"]
     },
-    //"sorbet": {
-    //  "command": "solargraph",
-    //  "args": ["tc", "--lsp", "--enable-all-experimental-lsp-features"],
-    //  "filetypes": ["ruby"],
-    //  "rootPatterns": ["sorbet/config"],
-    //  "initializationOptions": {},
-    //  "settings": {}
-    //}
+    "sorbet": {
+      "command": "solargraph",
+      "args": ["tc", "--lsp", "--enable-all-experimental-lsp-features"],
+      "filetypes": ["ruby"],
+      "rootPatterns": ["sorbet/config"],
+      "initializationOptions": {},
+      "settings": {}
+    }
   },
+  "jedi.diagnostics.enabled": true,
+  "jedi.diagnostics.didOpen": true,
+  "jedi.diagnostics.didChange": true,
+  "jedi.diagnostics.didSave": true,
   "list.insertMappings": {
     "<C-c>": "do:exit",
     "<C-d>": "do:stop",
@@ -61,12 +65,15 @@
     "<C-x>": "action:split",
     "<C-v>": "action:vsplit"
   },
- // "solargraph.useBundler":true,
- // "solargraph.diagnostics": true,
-//  "solargraph.autoformat": true,
-  //"solargraph.formatting": true,
-//  "solargraph.hover": true,
-  "snippets.extends": {"javascriptreact": ["javascript"], "vue": ["vue", "javascript"]},
+  "solargraph.useBundler": true,
+  "solargraph.diagnostics": true,
+  "solargraph.autoformat": true,
+  "solargraph.formatting": true,
+  "solargraph.hover": true,
+  "snippets.extends": {
+    "javascriptreact": ["javascript"],
+    "vue": ["vue", "javascript"]
+  },
   "snippets.editSnippetsCommand": "vsplit",
   "snippets.snipmate.enable": true,
   "snippets.ultisnips.enable": false,
@@ -74,7 +81,13 @@
   "coc.preferences.jumpCommand": "edit",
   "coc.preferences.extensionUpdateCheck": "weekly",
   "coc.preferences.snippetStatusText": "Ⓢ ",
-  "coc.preferences.formatOnSaveFiletypes": ["javascript", "html", "vue", "css", "javascriptreact"],
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "html",
+    "vue",
+    "css",
+    "javascriptreact"
+  ],
   "vetur.format.defaultFormatter.html": "prettier",
   "prettier.statusItemText": "ⓟ ",
   "prettier.eslintIntegration": true,
