--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -47,7 +47,16 @@
     },
     "sorbet": {
       "command": "srb",
-      "args": ["tc", "--typed", "true", "--enable-all-experimental-lsp-features", "--lsp", "--disable-watchman", "--dir", "."],
+      "args": [
+        "tc",
+        "--typed",
+        "true",
+        "--enable-all-experimental-lsp-features",
+        "--lsp",
+        "--disable-watchman",
+        "--dir",
+        "."
+      ],
       "filetypes": ["ruby"],
       "rootPatterns": ["sorbet/config"],
       "initializationOptions": {},
@@ -92,5 +101,6 @@
   "prettier.stylelintIntegration": true,
   "eslint.filetypes": ["javascript", "javascriptreact", "vue"],
   "eslint.autoFix": true,
-  "eslint.autoFixOnSave": true
+  "eslint.autoFixOnSave": true,
+  "python.jediEnabled": false
 }
