--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,8 @@ setw -g mouse off
 set -sg escape-time 1
 set -g repeat-time 1000
 set-option -g base-index 1
+set-option -g focus-events on
+set-option -sa terminal-overrides ',XXX:RGB'
 set-window-option -g pane-base-index 1
 set -g renumber-windows on
 
