Switch to LazyVim

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,7 +57,7 @@ bind-key V split-window -h -l 120
 
 unbind-key n
 bind-key c-n next-window
-bind-key c-p last-window
+bind-key c-p previous-window
 
 # navigate panes with hjkl
 bind-key h select-pane -L
