--- a/tmux-style.conf
+++ b/tmux-style.conf
@@ -4,18 +4,20 @@
 set -g status-justify "right"
 set -g status "on"
 set -g status-left-style "none"
-set -g message-command-style "fg=colour246,bg=colour239"
+set -g message-command-style "fg=#1b1d2b,bg=#3b4261"
 set -g status-right-style "none"
-set -g pane-active-border-style "fg=colour246"
-set -g status-style "none,bg=colour237"
-set -g message-style "fg=colour246,bg=colour239"
-set -g pane-border-style "fg=colour239"
+set -g pane-active-border-style "fg=#82aaff"
+set -g status-style "none,bg=#1e2030"
+set -g message-style "fg=#1b1d2b,bg=#3b4261"
+set -g pane-border-style "fg=#3b4261"
 set -g status-right-length "100"
 set -g status-left-length "100"
-setw -g window-status-activity-style "underscore,fg=colour246,bg=colour237"
+setw -g window-status-activity-style "nounderscore,fg=#82aaff,bg=#1e2030"
 setw -g window-status-separator ""
-setw -g window-status-style "none,fg=colour246,bg=colour237"
-set -g status-left "#{prefix_highlight}#[fg=colour236,bg=colour246] #S #[fg=colour246,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] #I:#P  #F #[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour237] #H #[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] Batt: #{battery_percentage} CPU: #{cpu_percentage} | %a %h-%d %H:%M"
-setw -g window-status-format "#[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour237,bg=colour237,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] #I  #W #[fg=colour237,bg=colour239,nobold,nounderscore,noitalics]"
+setw -g window-status-style "none,fg=#82aaff,bg=#1e2030"
+set -g status-left "#{prefix_highlight}#[fg=#3b4261,bg=#82aaff] #S #[fg=#82aaff,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#3b4261] #I:#P  #F #[fg=#3b4261,bg=#1e2030,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#1e2030] #H #[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#3b4261,bg=#1e2030,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#3b4261] Batt: #{battery_percentage} CPU: #{cpu_percentage} | %a %h-%d"
+setw -g window-status-format "#[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=#1e2030,bg=#1e2030,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#3b4261,bg=#1e2030,nobold,nounderscore,noitalics]#[fg=#82aaff,bg=#3b4261] #I  #W #[fg=#1e2030,bg=#3b4261,nobold,nounderscore,noitalics]"
+
+
