fix(konfiguration): aktualisiere Kitty und LazyVim Einstellungen
- Kitty:
  - Entferne doppelte Font-Größenspezifikation und Datei-Import
  - Füge spezifische Schriftarteinstellungen hinzu
- LazyVim:
  - Aktualisiere gesperrte Plugin-Commits in lazy-lock.json
  - Entferne "copilot-chat" und füge "snacks_explorer" in lazyvim.json
hinzu

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -20,8 +20,6 @@
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-font_size 18.0
-
 #: Font size (in pts).
 
 # force_ltr no
@@ -1145,8 +1143,6 @@ font_size 18.0
 #: Useful if you have shortcuts mapped for goto_tab N. If you prefer
 #: to see the index as a superscript, use {sup.index}. All data
 #: available is:
-
-include ./tokyo-night-kitty.conf
 
 #: title
 #:     The current tab title.
@@ -2662,3 +2658,15 @@ macos_option_as_alt yes
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="Hack Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
+
+font_size 18.0
+
+include ./tokyo-night-kitty.conf
