feat: update aliases, plugins, configurations, and themes

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2669,5 +2669,5 @@ bold_italic_font auto
 
 font_size 18.0
 
-include ./tokyo-night-kitty.conf
+include ./tokyonight_storm.conf
 # include ./nord.conf
