--- a/tmux.conf
+++ b/tmux.conf
@@ -18,8 +18,8 @@ set-window-option -g pane-base-index 1
 set -g renumber-windows on
 
 # Activity monitoring
-setw -g monitor-activity on
 # set -g window-status-activity-style 'fg=colour247,blink'
+setw -g monitor-activity off
 
 # Key Bindings
 unbind-key C-b
@@ -97,8 +97,18 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @open-S 'https://www.google.com/search?q='
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+### Tokyo Night Theme configuration
+set -g @theme_variation 'storm'
+set -g @theme_left_separator ''
+set -g @theme_right_separator ''
+set -g @theme_transparent_status_bar 'false'
+set -g @theme_transparent_left_separator_inverse ''
+set -g @theme_transparent_right_separator_inverse ''
+set -g @theme_plugins 'datetime,weather'
+set -g @theme_plugin_weather_location 'Chengdu, China'
 
+set -g @open-S 'https://www.google.com/search?q='
 # Style
-if-shell "[ -f ~/.tmux-style.conf ]" 'source ~/.tmux-style.conf'
+# if-shell "[ -f ~/.tmux-style.conf ]" 'source ~/.tmux-style.conf'
 run '~/.tmux/plugins/tpm/tpm'
