feat(config): update kitty theme and tab bar customization

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,8 @@
 # Configuration
 
 # improve colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",xterm-256color:RGB"
 
 # setw -g utf8 on
 # set -g status-utf8 on
@@ -19,7 +20,7 @@ set -g renumber-windows on
 
 # Activity monitoring
 # set -g window-status-activity-style 'fg=colour247,blink'
-setw -g monitor-activity off
+setw -g monitor-activity on
 
 # Key Bindings
 unbind-key C-b
@@ -96,19 +97,28 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @open-S 'https://www.google.com/search?q='
+
 set -g @plugin 'fabioluciano/tmux-tokyo-night'
-### Tokyo Night Theme configuration
-set -g @theme_variation 'storm'
+set -g @theme_inactive_window_title "#W #F"
+set -g @theme_active_window_title '#W #F'
+set -g @theme_variation 'night'
+set -g @theme_plugin_datetime_format '%Y-%m-%d'
+set -g @theme_plugin_weather_format '%t+H:%h+%c+%w'
+set -g @theme_plugins 'homebrew,battery,weather,datetime'
+
 set -g @theme_left_separator ''
 set -g @theme_right_separator ''
-set -g @theme_transparent_status_bar 'false'
 set -g @theme_transparent_left_separator_inverse ''
 set -g @theme_transparent_right_separator_inverse ''
-set -g @theme_plugins 'datetime,weather'
-set -g @theme_plugin_weather_location 'Chengdu, China'
+set -g @theme_session_icon ""
+set -g @theme_plugin_datetime_icon '  '
+set -g @theme_plugin_homebrew_icon '  '
+set -g @theme_plugin_battery_charging_icon '  '
+set -g @theme_plugin_battery_discharging_icon ' 󰁹 '
+set -g @theme_plugin_weather_icon '  '
 
-set -g @open-S 'https://www.google.com/search?q='
-# Style
-# if-shell "[ -f ~/.tmux-style.conf ]" 'source ~/.tmux-style.conf'
 run '~/.tmux/plugins/tpm/tpm'
