--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2669,5 +2669,29 @@ bold_italic_font auto
 
 font_size 18.0
 
-include ./tokyonight_storm.conf
+include ./tokyonight_night.conf
 # include ./nord.conf
+
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+
+tab_bar_edge                    buttom
+tab_bar_style                   custom
+tab_bar_align                   left
+tab_bar_min_tabs                1
+tab_switch_strategy             previous
+tab_bar_margin_height           0 10
+inactive_tab_font_style         normal
+active_tab_font_style           normal
+active_tab_foreground           #FFFFFF
+active_tab_background           #9C7BD7
+inactive_tab_foreground         #FFFFFF
+inactive_tab_background         #545B7D
+tab_title_template              "{fmt.fg.tab}  {index}:{title}"
