Update terminal and editor configurations
- Kitty: Disable all bell sounds, update theme path, adjust tab bar settings

- Neovim: Switch from copilot.lua to copilot.vim, add grok model support

- Neo-tree: Disable "/" mapping in window

- CtrlSF: Change position from left to right

- Tmux: Disable all bell and activity notifications

Signed-off-by: Griffin Qiu <griffinqiu@gmail.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,10 @@ set -g renumber-windows on
 # Activity monitoring
 # set -g window-status-activity-style 'fg=colour247,blink'
 setw -g monitor-activity on
+set -g bell-action none
+set -g visual-bell off
+set -g visual-activity off
+set -g visual-silence off
 
 # Key Bindings
 unbind-key C-b
