--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -813,6 +813,12 @@
 
 # command_on_bell none
 
+# Disable all bell sounds
+enable_audio_bell no
+visual_bell_duration 0.0
+window_alert_on_bell no
+bell_on_tab no
+
 #: Program to run when a bell occurs. The environment variable
 #: KITTY_CHILD_CMDLINE can be used to get the program running in the
 #: window in which the bell occurred.
@@ -2669,7 +2675,7 @@ bold_italic_font auto
 
 font_size 18.0
 
-include ./tokyonight_night.conf
+include ./tokyo-night-kitty.conf
 # include ./nord.conf
 
 map cmd+1 goto_tab 1
@@ -2687,7 +2693,7 @@ tab_bar_style                   custom
 tab_bar_align                   left
 tab_bar_min_tabs                1
 tab_switch_strategy             previous
-tab_bar_margin_height           0 10
+tab_bar_margin_height           0 3
 inactive_tab_font_style         normal
 active_tab_font_style           normal
 active_tab_foreground           #FFFFFF
