feat(nvim): update configuration settings
- Disable snacks animation for better performance

- Add root_spec configuration for project root detection

- Update Avante provider to use claude-sonnet-4-20250514 model

- Configure LSP diagnostics with virtual lines for current line only

- Add gopls server configuration

Signed-off-by: Griffin Qiu <griffinqiu@gmail.com>

--- a/aider.conf.yml
+++ b/aider.conf.yml
@@ -1,6 +1,6 @@
-# 输出设置
-dark-mode: true # 适配深色终端背景
-pretty: true # 启用彩色输出
+pretty: true
+dark-mode: false
+code-theme: "nord"
 
 # 颜色配置（使用 Tokyo Night 配色参数）
 user-input-color: "#9ece6a" # 绿色 - 用户输入 (color2)
