--- a/tmux.conf
+++ b/tmux.conf
@@ -37,8 +37,8 @@ bind-key C-a send-prefix
 bind-key C-l send-keys -R \; clear-history \; send-keys "Enter"
 
 # Copy and paste like in vim
-# unbind-key [
-bind Escape copy-mode
+unbind-key [
+bind-key tab copy-mode
 # bind-key -n ^v copy-mode
 # bind-key C-A send-prefix
 # bind-key -t vi-copy v begin-selection
@@ -124,4 +124,5 @@ set -g @theme_plugin_battery_charging_icon '  '
 set -g @theme_plugin_battery_discharging_icon ' 󰁹 '
 set -g @theme_plugin_weather_icon '  '
 
+set -g @plugin 'christoomey/vim-tmux-navigator'
 run '~/.tmux/plugins/tpm/tpm'
