--- a/tmux.conf
+++ b/tmux.conf
@@ -111,7 +111,7 @@ set -g @theme_active_window_title '#W #F'
 set -g @theme_variation 'night'
 set -g @theme_plugin_datetime_format '%Y-%m-%d'
 set -g @theme_plugin_weather_format '%t+H:%h+%c+%w'
-set -g @theme_plugins 'homebrew,battery,weather,datetime'
+set -g @theme_plugins 'homebrew,battery,datetime'
 
 set -g @theme_left_separator ''
 set -g @theme_right_separator ''
