refactor: replace AI coding plugin with terminal navigation solution

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,6 +43,11 @@ bind-key tab copy-mode
 # bind-key C-A send-prefix
 # bind-key -t vi-copy v begin-selection
 # bind-key -t vi-copy y copy-selection
+
+# Tab to toggle copy-mode (enter/exit)
+bind-key -T copy-mode-vi Tab send-keys -X cancel
+unbind-key -T copy-mode-vi q
+
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 unbind-key p
@@ -101,6 +106,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @open-S 'https://www.google.com/search?q='
