--- a/tmux.conf
+++ b/tmux.conf
@@ -35,6 +35,8 @@ bind-key C-a send-prefix
 bind-key C-l send-keys "clear && tmux clear-history" \; send-keys "Enter"
 # bind -n C-k clear-history
 # bind-key C-l send-keys -R \; clear-history \; send-keys "Enter"
+# unbind clock-mode
+unbind-key t
 
 # Copy and paste like in vim
 unbind-key [
@@ -105,28 +107,30 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-copycat'
 
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @open-S 'https://www.google.com/search?q='
 
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
-set -g @theme_inactive_window_title "#W #F"
-set -g @theme_active_window_title '#W #F'
-set -g @theme_variation 'night'
-set -g @theme_plugin_datetime_format '%Y-%m-%d'
-set -g @theme_plugin_weather_format '%t+H:%h+%c+%w'
-set -g @theme_plugins 'homebrew,battery,datetime'
+set -g @plugin 'fabioluciano/tmux-powerkit'
+set -g @powerkit_session_icon ""
+set -g @powerkit_status_position "top"
+set -g @powerkit_elements_spacing "both"
+# 主题选项 (50+ 可选):
+#   tokyo-night, catppuccin, dracula, nord, gruvbox, monokai, onedark,
+#   rose-pine, kanagawa, everforest, solarized, ayu, github, material,
+#   night-owl, oceanic-next, synthwave, moonlight, iceberg, hackerman,
+#   matte-black, ethereal, lagoon, starlight, vesper, snazzy, flexoki...
+# 变体: night, day, storm, moon, dark, light, mocha, latte, frappe...
+set -g @powerkit_theme "tokyo-night"
+set -g @powerkit_theme_variant "night"
+# 分隔符样式: normal, rounded, flame, pixel, honeycomb, none, powerline
+set -g @powerkit_separator_style 'flame'
+# 边缘分隔符: 同上, 可加 :all 后缀应用到所有边缘
+set -g @powerkit_edge_separator_style "flame"
 
-set -g @theme_left_separator ''
-set -g @theme_right_separator ''
-set -g @theme_transparent_left_separator_inverse ''
-set -g @theme_transparent_right_separator_inverse ''
-set -g @theme_session_icon ""
-set -g @theme_plugin_datetime_icon '  '
-set -g @theme_plugin_homebrew_icon '  '
-set -g @theme_plugin_battery_charging_icon '  '
-set -g @theme_plugin_battery_discharging_icon ' 󰁹 '
-set -g @theme_plugin_weather_icon '  '
+set -g @powerkit_plugins "nowplaying,weather,ping,temperature,volume,battery"
+set -g @powerkit_plugin_weather_location "Chengdu"
+set -g @powerkit_plugin_ping_host "61.139.2.69"
 
 run '~/.tmux/plugins/tpm/tpm'
+# End of Plugins
