feat(config): remove extra tmux plugins to streamline configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -103,9 +103,6 @@ if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 # Plugins
 # https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @plugin 'tmux-plugins/tmux-open'
@@ -130,6 +127,7 @@ set -g @powerkit_edge_separator_style "flame"
 
 set -g @powerkit_plugins "nowplaying,weather,ping,temperature,volume,battery"
 set -g @powerkit_plugin_weather_location "Chengdu"
+set -g @powerkit_plugin_weather_format '%t+H:%h+%w'
 set -g @powerkit_plugin_ping_host "61.139.2.69"
 
 run '~/.tmux/plugins/tpm/tpm'
