--- a/tmux.conf
+++ b/tmux.conf
@@ -113,6 +113,12 @@ set -g @powerkit_session_icon ""
 set -g @powerkit_status_position "bottom"
 set -g @powerkit_elements_spacing "both"
 
+# 主题选项 (50+ 可选):
+#   tokyo-night, catppuccin, dracula, nord, gruvbox, monokai, onedark,
+#   rose-pine, kanagawa, everforest, solarized, ayu, github, material,
+#   night-owl, oceanic-next, synthwave, moonlight, iceberg, hackerman,
+#   matte-black, ethereal, lagoon, starlight, vesper, snazzy, flexoki...
+# 变体: night, day, storm, moon, dark, light, mocha, latte, frappe...
 set -g @powerkit_theme "tokyo-night"
 set -g @powerkit_theme_variant "storm"
 # 分隔符样式: normal, rounded, flame, pixel, honeycomb, none, powerline
