fix(md): adjust line wrapping for readability in CLAUDE.md

--- a/tmux.conf
+++ b/tmux.conf
@@ -110,7 +110,7 @@ set -g @open-S 'https://www.google.com/search?q='
 
 set -g @plugin 'fabioluciano/tmux-powerkit'
 set -g @powerkit_session_icon ""
-set -g @powerkit_status_position "bottom"
+set -g @powerkit_status_position "top"
 set -g @powerkit_elements_spacing "both"
 
 # 主题选项 (50+ 可选):
@@ -126,7 +126,7 @@ set -g @powerkit_separator_style 'flame'
 # 边缘分隔符: 同上, 可加 :all 后缀应用到所有边缘
 set -g @powerkit_edge_separator_style "flame"
 
-set -g @powerkit_plugins "nowplaying,weather,ping,temperature,volume,battery"
+set -g @powerkit_plugins "nowplaying,weather,ping,temperature,volume"
 set -g @powerkit_plugin_weather_location "Chengdu"
 set -g @powerkit_plugin_weather_format '%t+H:%h+%w'
 set -g @powerkit_plugin_ping_host "61.139.2.69"
