feat(grug-far): add toggle function and keybindings for search and replace

--- a/config/nvim/.luarc.json
+++ b/config/nvim/.luarc.json
@@ -1,11 +1,13 @@
 {
-  "diagnostics.disable": [
-    "deprecated",
-    "unused-local",
-    "undefined-field",
-    "need-check-nil",
-    "missing-fields",
-    "undefined-global",
-    "redefined-local"
-  ]
+  "diagnostics": {
+    "disable": [
+      "deprecated",
+      "unused-local",
+      "undefined-field",
+      "need-check-nil",
+      "missing-fields",
+      "undefined-global",
+      "redefined-local"
+    ]
+  }
 }
