--- a/tmux.conf
+++ b/tmux.conf
@@ -120,7 +120,7 @@ set -g @powerkit_elements_spacing "both"
 #   matte-black, ethereal, lagoon, starlight, vesper, snazzy, flexoki...
 # 变体: night, day, storm, moon, dark, light, mocha, latte, frappe...
 set -g @powerkit_theme "tokyo-night"
-set -g @powerkit_theme_variant "storm"
+set -g @powerkit_theme_variant "moon"
 # 分隔符样式: normal, rounded, flame, pixel, honeycomb, none, powerline
 set -g @powerkit_separator_style 'flame'
 # 边缘分隔符: 同上, 可加 :all 后缀应用到所有边缘
