--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2675,7 +2675,7 @@ bold_italic_font auto
 
 font_size 18.0
 
-include ./tokyonight_moon.conf
+include ./colors.conf
 # include ./nord.conf
 
 map cmd+1 goto_tab 1
