--- a/config/kitty/colors.conf
+++ b/config/kitty/colors.conf
@@ -1,42 +1,38 @@
 # vim:ft=kitty
-# kanagawa-dragon
-# https://github.com/rebelot/kanagawa.nvim/
+# everforest dark medium
+# https://github.com/neanias/everforest-nvim
 
-background #181616
-foreground #c5c9c5
-selection_background #2D4F67
-selection_foreground #C8C093
-url_color #72A7BC
-cursor #C8C093
+background #2d353b
+foreground #d3c6aa
+selection_background #543a48
+selection_foreground #d3c6aa
+url_color #7fbbb3
+cursor #d3c6aa
 
-active_tab_background #12120f
-active_tab_foreground #C8C093
-inactive_tab_background #12120f
-inactive_tab_foreground #a6a69c
+active_tab_background #232a2e
+active_tab_foreground #d3c6aa
+inactive_tab_background #232a2e
+inactive_tab_foreground #859289
 
-active_border_color #8ba4b0
-inactive_border_color #2D4F67
+active_border_color #7fbbb3
+inactive_border_color #3d484d
 
 # normal
-color0 #0d0c0c
-color1 #c4746e
-color2 #8a9a7b
-color3 #c4b28a
-color4 #8ba4b0
-color5 #a292a3
-color6 #8ea4a2
-color7 #C8C093
+color0 #2d353b
+color1 #e67e80
+color2 #a7c080
+color3 #dbbc7f
+color4 #7fbbb3
+color5 #d699b6
+color6 #83c092
+color7 #d3c6aa
 
 # bright
-color8  #a6a69c
-color9  #E46876
-color10 #87a987
-color11 #E6C384
-color12 #7FB4CA
-color13 #938AA9
-color14 #7AA89F
-color15 #c5c9c5
-
-# extended colors
-color16 #b6927b
-color17 #b98d7b
+color8  #475258
+color9  #e67e80
+color10 #a7c080
+color11 #dbbc7f
+color12 #7fbbb3
+color13 #d699b6
+color14 #83c092
+color15 #d3c6aa
